syntax = "proto3";

option go_package = "/login";

service Authentication {
    rpc Login (AuthData) returns (Tokens);
    rpc Refresh (RefreshToken) returns (Tokens);
}

message AuthData {
    string login = 1;
    string password =2;
}
message RefreshToken {
    string refresh_token = 1;
}
message Tokens {
    string refresh_token =1;
    string auth_token = 2;
}

