syntax = "proto3";

option go_package = "/user";

service User {
    //current user id in ctx
    rpc GetUser(UserID) returns(UserInfo);
    rpc AddUser(UserData) returns (UserInfo);
    rpc EditUser(UserData) returns (UserInfo);
}
enum Privacy {
    onlyMe = 0;
    friend = 1;
    friends_friends=2;
    all =4;
}
message UserID {
    int64 id = 1;
}

message UserData{
    reserved 1; reserved "id";
    string name = 2;
    Privacy profile_visible = 3;
}
message UserInfo{
    int64 id = 1;
    string name = 2;
    Privacy profile_visible = 3; 
}

